--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav ul li a {
     color: white;
     text-transform: uppercase;
     background-color: #debd00;
-    padding: 5px 15px;
+    padding: 8px;
     box-shadow: 2px 2px 2px 2px black;
     border-radius: 10px;
 }
